--- a/최선화/assets/css/reset.css
+++ b/최선화/assets/css/reset.css
@@ -1,5 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@font-face {
+    font-family: "IropkeBatang";
+    font-weight: normal;
+    font-style: normal;
+    src: url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot");
+    src: url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot?#iefix") format("embedded-opentype"),
+        url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff2") format("woff2"),
+        url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff") format("woff"),
+        url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.ttf") format("truetype");
+    font-display: swap;
+}
 @font-face {
     font-family: "CondensedRegular";
     font-weight: normal;
