--- a/최선화/assets/css/style.css
+++ b/최선화/assets/css/style.css
@@ -10,6 +10,7 @@
     padding: 1rem;
     display: flex;
     justify-content: space-between;
+    z-index: 1000;
 }
 
 #header h1 {
@@ -70,7 +71,6 @@
 
 #section2 {
     width: 100%;
-    height: 100vh;
     position: relative;
 }
 
@@ -163,6 +163,10 @@
     padding-left: 20px;
     display: inline-block;
 }
+.dot.right {
+    left: auto;
+    right: 0;
+}
 .dot::before {
     content: "";
     width: 10px;
@@ -185,13 +189,60 @@
     overflow: hidden;
 }
 
+.sec5__inner .article.a2 .imgWrap {
+    width: 35%;
+    margin-left: auto;
+}
+
 .sec5__inner .article .imgWrap .img {
     position: absolute;
-    left: -5%;
-    top: -5%;
-    width: 110%;
-    height: 110%;
+    left: -30%;
+    top: 5%;
+    width: 160%;
+    height: 160%;
     background: url(../img/bg01.jpg) center center no-repeat;
+}
+
+.sec5__inner .article.a2 .imgWrap .img {
+    background: url(../img/bg02@2x.png) center center no-repeat;
+    background-size: cover;
+}
+
+.sec5__inner .article .imgWrap .link {
+    padding-left: 20px;
+    margin-top: 10px;
+    font-family: "IropkeBatang";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+
+.sec5__inner .article .imgWrap .link a {
+    position: relative;
+    margin-right: 5px;
+    background-color: #ffffff68;
+    padding: 5px 33px 5px 17px;
+    margin-bottom: 20px;
+    display: inline-block;
+    border-radius: 50px;
+    border: 1px solid #fff;
+    backdrop-filter: blur(10px);
+}
+
+.sec5__inner .article .link a::after {
+    display: inline-block;
+    content: "";
+    width: 16px;
+    height: 16px;
+    background: url("../img/arrow.svg") no-repeat;
+    background-size: cover;
+    position: absolute;
+    right: 10px;
+    top: 8px;
+    transition: all 0.3s;
+}
+.sec5__inner .article .link a:hover::after {
+    transform: rotate(-45deg);
 }
 
 .sec5__inner .article h3 {
@@ -208,16 +259,68 @@
     line-height: 1.6;
     padding-left: 20px;
 }
-.sec5__inner .article .link {
+
+.article2 {
+    text-align: right;
+    margin-top: -20vh;
+}
+.article2 .imgWrap {
+    width: 35%;
+    aspect-ratio: 9/12;
+    background-color: #000;
+    position: relative;
+    overflow: hidden;
+    margin-left: auto;
+}
+
+.article2 .imgWrap .img {
+    position: absolute;
+    left: -20%;
+    top: 5%;
+    width: 146%;
+    height: 140%;
+    background: url(../img/bg02@2x.png) center center no-repeat;
+    background-size: cover;
+}
+
+.article2 h3 {
+    font-family: "IropkeBatang";
+    color: #0038e9;
+    font-size: 34px;
+    margin-top: 30px;
+    padding-left: 20px;
+}
+
+.article2 p {
+    font-family: "IropkeBatang";
+    margin-top: 20px;
+    color: #666;
+    line-height: 1.6;
+    padding-left: 20px;
+}
+
+.article2 .imgWrap .link {
     padding-left: 20px;
     margin-top: 10px;
     font-family: "IropkeBatang";
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
-.sec5__inner .article .link a {
+
+.article2 .imgWrap .link a {
     position: relative;
-    margin-right: 30px;
+    margin-right: 5px;
+    background-color: #ffffff68;
+    padding: 5px 33px 5px 17px;
+    margin-bottom: 20px;
+    display: inline-block;
+    border-radius: 50px;
+    border: 1px solid #fff;
+    backdrop-filter: blur(10px);
 }
-.sec5__inner .article .link a::after {
+
+.article2 .link a::after {
     display: inline-block;
     content: "";
     width: 16px;
@@ -225,10 +328,38 @@
     background: url("../img/arrow.svg") no-repeat;
     background-size: cover;
     position: absolute;
-    right: -20px;
-    top: 2px;
+    right: 10px;
+    top: 8px;
     transition: all 0.3s;
 }
-.sec5__inner .article .link a:hover::after {
+.article2 .link a:hover::after {
     transform: rotate(-45deg);
+}
+
+@media (max-width: 1420px) {
+    .container {
+        width: 96%;
+    }
+    .sec5__inner .article .imgWrap {
+        width: 500px;
+    }
+}
+@media (max-width: 960px) {
+    .article2 {
+        margin-top: 200px;
+    }
+}
+@media (max-width: 600px) {
+    .container {
+        width: 96%;
+    }
+    .sec5__inner .article .imgWrap {
+        width: 100%;
+    }
+    .sec5__inner .article h3 {
+        font-size: 24px;
+    }
+    .sec5__inner .article p br {
+        display: none;
+    }
 }
