--- a/박진아/assets/css/style2.css
+++ b/박진아/assets/css/style2.css
@@ -122,6 +122,13 @@
     transform: rotate(45deg);
 }
 
+.about2 {
+    margin-top: 400px;
+}
+.about2 .title {
+    margin-top: 100px;
+}
+
 /* skillWrap */
 .skillWrap {
     display: grid;
@@ -196,13 +203,24 @@
     position: relative;
 }
 #section3 h3 {
-    font-size: 40vw;
+    font-size: 30vw;
     font-family: "NeoGeoTrial-ExtraLight";
     text-transform: uppercase;
-    padding-left: 100vw;
-    letter-spacing: 14vw;
+    padding-left: 50vw;
+    letter-spacing: 2vw;
     color: #fff;
 }
+
+#section3 .sec3-desc {
+    position: absolute;
+    left: 1%;
+    top: 10%;
+}
+
+#section3 .sec3-desc p {
+    width: 800px;
+}
+
 .projectWrap {
     width: 100%;
     height: 100%;
