--- a/박소현2/assets/css/style.css
+++ b/박소현2/assets/css/style.css
@@ -167,6 +167,15 @@ p {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    z-index: 100000;
+}
+
+/* pop */
+.pop {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* SsvgWrap */
@@ -178,16 +187,119 @@ p {
 
 .skillWrap .skill {
     position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    perspective: 600px;
 }
-.skillWrap .skill.s1 {
+.skillWrap .skill .icon {
+    width: 7%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.skillWrap .skill .js {
+    left: 24%;
+    top: 12%;
+    animation: updown 1s infinite ease-in-out;
+}
+.skillWrap .skill .css {
+    left: 40.5%;
+    top: 13%;
+    animation: updown 2s infinite ease-in-out;
+}
+.skillWrap .skill .figma {
+    left: auto;
+    top: auto;
+    right: 25%;
+    bottom: 23%;
+    animation: updown 4s infinite ease-in-out;
+}
+.skillWrap .skill .ja {
+    left: -10%;
+    top: 13%;
+    animation: updown 4s infinite ease-in-out;
+}
+.skillWrap .skill .ai {
+    left: 20%;
+    top: 48%;
+    animation: updown 4s infinite ease-in-out;
+}
+.skillWrap .skill .i1 {
+    width: 5%;
+    left: 8%;
+    top: 15%;
+    animation: updown 4s infinite ease-in-out;
+}
+.skillWrap .skill .click {
+    width: 3px;
+    height: 3px;
+    position: absolute;
+    z-index: 10000;
+    background-color: #fff;
+    border-radius: 50%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    display: block;
+}
+
+.skillWrap .skill .click span {
+    border: 4px solid #fff;
+    width: 0px;
+    height: 0px;
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transform-origin: center;
+    border-radius: 50px;
+    animation: scale 2s infinite ease-in;
+}
+
+.skillWrap .s1 {
     width: 700px;
-    right: 1%;
+    right: 3%;
+    transform: translateY(-40%);
+    /* background-color: #ccc; */
 }
-.skillWrap .skill.s2 {
+.skillWrap .s2 {
     width: 200px;
-    transform: rotateY(180deg);
-    left: 1%;
-    top: 20%;
+    transform: rotateY(180deg) translateY(-180%);
+    left: 3%;
+}
+@keyframes scale {
+    0% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+    }
+    100% {
+        transform: translate(-50%, -50%) scale(10);
+        opacity: 0;
+    }
+}
+@keyframes rotate {
+    0% {
+        transform: rotate(45deg);
+    }
+    50% {
+        transform: rotate(35deg);
+    }
+    100% {
+        transform: rotate(45deg);
+    }
+}
+@keyframes updown {
+    0% {
+        transform: translateY(0%);
+    }
+    50% {
+        transform: translateY(-15%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
 }
 
 @media (max-width: 1940px) {
@@ -197,18 +309,14 @@ p {
 }
 
 @media (max-width: 1700px) {
-    #skiilMain {
-        width: 100%;
-    }
     .skillWrap .skill.s1 {
         width: 650px;
-        right: 3%;
     }
     .skillWrap .skill.s2 {
         width: 190px;
-        left: 3%;
     }
 }
+
 @media (max-width: 1440px) {
     .skillWrap .skill.s1 {
         width: 550px;
@@ -228,20 +336,17 @@ p {
 @media (max-width: 768px) {
     .skillWrap .skill.s1 {
         width: 350px;
-        top: 15%;
     }
     .skillWrap .skill.s2 {
         width: 110px;
     }
 }
-
 @media (max-width: 600px) {
     .tty {
         display: none;
     }
     .skillWrap .skill.s1 {
         width: 350px;
-        top: 15%;
     }
     .skillWrap .skill.s2 {
         width: 110px;
@@ -250,7 +355,6 @@ p {
 @media (max-width: 400px) {
     .skillWrap .skill.s1 {
         width: 300px;
-        top: 20%;
     }
     .skillWrap .skill.s2 {
         width: 90px;
@@ -431,4 +535,36 @@ p {
     flex-direction: column;
     position: relative;
     overflow: hidden;
+}
+
+.modal {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 100000;
+    width: 100vw;
+    height: 100vh;
+    background-color: #00000045;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+.modal__inner {
+    width: 400px;
+    aspect-ratio: 4/6;
+    background-color: #ffe5e5;
+    position: relative;
+    color: #fff;
+    padding: 5%;
+    text-align: center;
+    color: #000;
+}
+.model__close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    width: 30px;
+    height: 30px;
 }
