--- a/박소현/assets/css/style.css
+++ b/박소현/assets/css/style.css
@@ -11,6 +11,101 @@
     justify-content: space-between;
 }
 
+.sub #wrap #header {
+    width: 100%;
+    height: 230px;
+    background-color: #ffffff91;
+    backdrop-filter: blur(10px);
+    z-index: 1000;
+}
+
+.sub #wrap #header nav {
+    font-family: "Abel";
+    margin-top: 30px;
+    padding: 10px 20px;
+}
+.sub #wrap #header nav ul {
+    display: flex;
+    width: 100%;
+    background: #e9e9e9;
+    border-radius: 20px;
+}
+.sub #wrap #header nav li {
+    list-style: none;
+    width: 25%;
+    text-align: center;
+    text-transform: capitalize;
+    cursor: pointer;
+}
+
+.sub #section1 {
+    margin: 10px;
+    width: calc(100% - 20px);
+}
+
+.sub #wrap #main {
+    margin-left: 10px;
+    margin-top: 230px;
+}
+#sectionWrap {
+    width: 100%;
+    height: 5000px;
+}
+.masonry {
+    column-count: 1;
+    column-gap: 0;
+    counter-reset: item-counter;
+}
+@media screen and (min-width: 400px) {
+    .masonry {
+        column-count: 2;
+    }
+}
+@media screen and (min-width: 600px) {
+    .masonry {
+        column-count: 3;
+    }
+}
+@media screen and (min-width: 800px) {
+    .masonry {
+        column-count: 4;
+    }
+}
+@media screen and (min-width: 1100px) {
+    .masonry {
+        column-count: 4;
+    }
+}
+
+.item {
+    box-sizing: border-box;
+    -moz-column-break-inside: avoid;
+    break-inside: avoid;
+    padding: 10px;
+    counter-increment: item-counter;
+}
+.item__content {
+    position: relative;
+    font-size: 20px;
+    box-sizing: border-box;
+    background-color: #ccc;
+}
+.item__content .img {
+    width: 100%;
+}
+.item__content .img img {
+    width: 100%;
+}
+.item__content--small {
+    height: 100px;
+}
+.item__content--medium {
+    height: 175px;
+}
+.item__content--large {
+    height: 280px;
+}
+
 #header {
     position: fixed;
     left: 0;
@@ -46,8 +141,8 @@
     position: relative;
 }
 
-#section2>div {
-    color: #E7E8DA;
+#section2 > div {
+    color: #e7e8da;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -55,15 +150,15 @@
     z-index: 100;
 }
 
-#section2>div span {
-    font-family: 'Oswald';
+#section2 > div span {
+    font-family: "Oswald";
     font-weight: 100;
     mix-blend-mode: difference;
 }
 
 canvas {
-    font-family: 'Oswald';
-    font-variation-settings: 'wght' 100;
+    font-family: "Oswald";
+    font-variation-settings: "wght" 100;
     position: absolute;
     left: 0;
     top: 0;
@@ -74,7 +169,7 @@ canvas {
 }
 
 .article1 h1 {
-    font-family: 'Oswald';
+    font-family: "Oswald";
     font-weight: 100;
     font-size: 30px;
     text-transform: capitalize;
@@ -86,7 +181,7 @@ canvas {
 }
 
 .article1 .date {
-    font-family: 'Oswald';
+    font-family: "Oswald";
     font-weight: 100;
 }
 
@@ -122,7 +217,7 @@ canvas {
 
 .article-about p {
     width: calc(100% - 110px);
-    font-family: 'nexonLv2';
+    font-family: "nexonLv2";
     font-size: 14px;
     line-height: 1.4;
     color: #666;
@@ -130,7 +225,7 @@ canvas {
 }
 
 .article-about p::after {
-    content: '';
+    content: "";
     background-image: url(../assets/img/logo.svg);
     background-size: contain;
     background-repeat: no-repeat;
@@ -177,7 +272,7 @@ canvas {
 
 .article-title p {
     width: calc(100% - 70px);
-    font-family: 'nexonLv2';
+    font-family: "nexonLv2";
     font-size: 14px;
     line-height: 1.4;
     color: #777;
@@ -190,7 +285,6 @@ canvas {
     font-weight: 500;
     margin-bottom: 3px;
 }
-
 
 .sub1 {
     width: 100%;
@@ -214,7 +308,7 @@ canvas {
     gap: 10px;
 }
 
-.section2>div {
+.section2 > div {
     border-radius: 10px;
     overflow: hidden;
 }
@@ -225,7 +319,7 @@ canvas {
     text-align: center;
     padding: 5%;
     margin-top: 10px;
-    font-family: 'nexonLv2';
+    font-family: "nexonLv2";
     color: #fff;
 }
 
@@ -233,7 +327,7 @@ canvas {
     font-size: 24px;
     margin-bottom: 8px;
     font-weight: normal;
-    font-family: 'dangDangHae';
+    font-family: "dangDangHae";
 }
 
 .section3 p {
