--- a/박정민/assets/css/style.css
+++ b/박정민/assets/css/style.css
@@ -237,3 +237,31 @@
     padding: 2px 15px;
     border-radius: 30px;
 }
+#section4 {
+    position: relative;
+    overflow: hidden;
+}
+.imgWrap {
+    position: absolute;
+    left: 50%;
+    top: 100px;
+    transform: translateX(-50%);
+    width: 50%;
+    height: 1000px;
+    /* background-color: #fff; */
+}
+.imgWrap .img.img1 {
+    width: 100%;
+    aspect-ratio: 4 / 3;
+    background-image: url(../img/site1.png);
+    background-size: cover;
+    transform: rotate(5deg);
+}
+.imgWrap .img.img2 {
+    margin-top: -100px;
+    width: 100%;
+    aspect-ratio: 4 / 3;
+    background-image: url(../img/site2.png);
+    background-size: cover;
+    transform: rotate(-5deg);
+}
