--- a/김진우/assets/css/style.css
+++ b/김진우/assets/css/style.css
@@ -354,6 +354,19 @@ body {
     padding: 7px 14px 5px;
     font-size: 14px;
 }
+.portlayer .port .c2 .cont .left li.active {
+    position: relative;
+    padding-left: 40px;
+}
+.portlayer .port .c2 .cont .left li.active::before {
+    content: "";
+    background: url(../img/arrow.svg) no-repeat;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: 14px;
+    top: 7px;
+}
 .portlayer .port .c2 .cont .left li:nth-child(even) {
     background-color: #00000048;
     backdrop-filter: blur(5px);
@@ -585,6 +598,10 @@ body {
 .layer.react .layer__footer {
     display: flex;
     justify-content: space-between;
+}
+.layer.react .layer__footer a {
+    text-decoration: underline;
+    text-underline-position: under;
 }
 
 .layer.react .layer__footer span {
