--- a/박진아/assets/css/style2.css
+++ b/박진아/assets/css/style2.css
@@ -254,3 +254,174 @@
 .projectWrap .project.p5 {
     left: 120%;
 }
+
+#section4 {
+    padding: 20px;
+    width: 100%;
+    background-color: #000;
+    color: #fff;
+}
+#section4 .title {
+    margin-top: 100px;
+    color: #999;
+}
+#section4 .desc2 {
+    padding: 0 0 0 60%;
+    font-family: "IropkeBatang";
+    word-break: keep-all;
+    font-size: 16px;
+    line-height: 1.7;
+    color: #f1f1f1;
+}
+#section4 .comments {
+    margin-top: 100px;
+}
+
+.masonry {
+    column-count: 1;
+    column-gap: 0;
+    counter-reset: item-counter;
+}
+@media screen and (min-width: 400px) {
+    .masonry {
+        column-count: 2;
+    }
+}
+@media screen and (min-width: 600px) {
+    .masonry {
+        column-count: 3;
+    }
+}
+@media screen and (min-width: 800px) {
+    .masonry {
+        column-count: 4;
+    }
+}
+@media screen and (min-width: 1100px) {
+    .masonry {
+        column-count: 5;
+    }
+}
+
+.item {
+    box-sizing: border-box;
+    -moz-column-break-inside: avoid;
+    break-inside: avoid;
+    padding: 10px;
+}
+.item__content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    box-sizing: border-box;
+    color: #fff;
+    background-color: #ffffff27;
+    backdrop-filter: blur(10px);
+    padding: 20px;
+    z-index: 10;
+}
+.item__content::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: #0000007e;
+    backdrop-filter: blur(10px);
+    background-size: cover;
+    z-index: -1;
+}
+
+.item:nth-child(1) .item__content {
+    background-image: url("https://plus.unsplash.com/premium_photo-1675011288741-f86047b7ef29?q=80&w=4287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
+.item:nth-child(2) .item__content {
+    background-image: url("https://images.unsplash.com/photo-1721566364814-7345a56e7ab0?q=80&w=4287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
+.item:nth-child(3) .item__content {
+    background-image: url("https://images.unsplash.com/photo-1721032608880-b82c45362c23?q=80&w=4254&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
+.item.i4 .item__content {
+    background-image: url("https://images.unsplash.com/photo-1720857018297-1fd008d44b07?q=80&w=3592&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
+.item.com .item__content h3 {
+    font-size: 16px;
+    font-family: "IropkeBatang";
+    color: #ffffff5e;
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+.item.com .item__content input {
+    border: 0;
+    margin-bottom: 5px;
+    background-color: transparent;
+    border: 1px solid #ffffff50;
+    padding: 3px 10px;
+    font-family: "IropkeBatang";
+    font-size: 14px;
+    width: 100%;
+}
+.item.com {
+    padding: 10px;
+}
+.item.com .item__content button {
+    width: 100%;
+    display: block;
+    font-family: "IropkeBatang";
+    background: transparent;
+    padding: 1px 3px;
+    border: 0;
+    color: #fff;
+}
+
+.comment-desc {
+    font-family: "IropkeBatang";
+    word-break: keep-all;
+    font-size: 16px;
+    line-height: 1.7;
+    color: #f1f1f1;
+    position: relative;
+    z-index: 100;
+}
+.comment-author {
+    font-family: "IropkeBatang";
+    word-break: keep-all;
+    font-size: 16px;
+    line-height: 1.7;
+    color: #f1f1f1;
+    position: relative;
+    z-index: 100;
+}
+.comment-author span {
+    margin-right: 10px;
+}
+
+.item__content:hover {
+    background: #9b0034;
+}
+.item__content:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 13px;
+    width: 2em;
+    height: 2em;
+    line-height: 2em;
+    text-align: center;
+    font-weight: bold;
+}
+.item__content--small {
+    height: 100px;
+}
+
+.item__content--medium {
+    height: 175px;
+}
+
+.item__content--large {
+    height: 280px;
+}
