--- a/김혜지/assets/css/style2.css
+++ b/김혜지/assets/css/style2.css
@@ -48,6 +48,53 @@
     width: 100%;
 }
 
+#contact {
+    position: fixed;
+    right: 30px;
+    bottom: 110px;
+    z-index: 10000;
+}
+
+#contact .img {
+    width: 150px;
+    height: 150px;
+    background: #000;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    background-image: url(../img/hy.webp);
+    background-position: top center;
+    background-size: cover;
+    border: 4px solid #fff;
+    box-shadow: 0 0 0 4px #00000017;
+    position: relative;
+}
+
+#contact .img::after {
+    content: "";
+    background-image: url(../img/arr.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 40px;
+    height: 60px;
+    position: absolute;
+    left: -30px;
+    bottom: -10px;
+}
+
+#contact button {
+    background-color: #f495bf;
+    color: #000;
+    padding: 10px 20px;
+    border: 3px solid #000;
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-family: "yache";
+    font-size: 20px;
+    font-weight: bold;
+    position: relative;
+    z-index: 100;
+}
+
 #section1 .sun svg {
     width: 100%;
 }
