--- a/박소현2/assets/css/style.css
+++ b/박소현2/assets/css/style.css
@@ -548,7 +548,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
-    display: none;
+    /* display: none; */
 }
 
 .modal__inner {
