--- a/송성민/assets/css/style.css
+++ b/송성민/assets/css/style.css
@@ -108,6 +108,11 @@ body {
     justify-content: center;
 }
 
+#section1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .menu {
     overflow: hidden;
     cursor: -webkit-grab;
@@ -115,7 +120,7 @@ body {
     width: 100%;
     position: relative;
     z-index: 1;
-    height: 25vh;
+    height: 50vh;
 }
 
 .menu.is-dragging {
@@ -144,6 +149,12 @@ body {
     height: 100%;
     padding: 0 1.5vw;
     overflow: hidden;
+}
+.menu--item.menu1 .img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
 }
 
 @media (max-width: 767px) {
