--- a/강서연/assets/css/reset.css
+++ b/강서연/assets/css/reset.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abel&family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap");
 @font-face {
     font-family: "Chopsic";
     src: url("../fonts/Chopsic.woff") format("woff");
