--- a/강서연/assets/css/style.css
+++ b/강서연/assets/css/style.css
@@ -122,17 +122,6 @@ body {
     bottom: 20px;
     z-index: 100;
     width: 100%;
-    height: 20vh;
-    background-color: #00000067;
-    backdrop-filter: blur(40px);
-}
-#contents .nav ul {
-    display: flex;
-    gap: 10px;
-    padding: 10px;
-}
-#contents .nav li {
-    font-size: 30px;
 }
 
 .music-veiw {
@@ -235,10 +224,13 @@ body {
 .leftNamePicture .left .img {
     background-image: url(../img/se.png);
     background-size: cover;
-    width: 100%;
+    width: 101px;
     height: 100%;
-    filter: contrast(50%);
     filter: saturate(0%);
+    transition: all 0.3s;
+}
+.leftNamePicture .left .img:hover {
+    filter: saturate(100%);
 }
 
 .time {
@@ -343,90 +335,155 @@ body {
     margin-top: 10px;
 }
 
+.bomBtn {
+    padding: 8px;
+}
+.bomBtn ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 4px;
+}
+.bomBtn ul li {
+    font-size: 30px;
+}
+
 .lineWrap {
     position: relative;
-    background-color: rgba(255, 255, 255, 0.05);
     width: 80px;
     height: 80px;
     color: rgba(255, 255, 255, 0.8);
     font-family: "Dosis";
     text-align: center;
     line-height: 80px;
+    transition: all 0.3s;
+    background: #000;
 }
 .lineWrap:hover {
-    background-color: rgba(255, 255, 255, 0.11);
+    color: #7ce0fe;
+    background-color: #7ce0fe5b;
 }
+
 .lineWrap .line {
     position: absolute;
 }
 .lineWrap .line.topLeft {
     left: 0;
-    top: 6px;
+    top: 15px;
     width: 1px;
-    height: calc(100% - 12px);
+    height: calc(100% - 30px);
     background-color: rgba(255, 255, 255, 0.1);
     position: absolute;
+    transition: all 0.3s;
 }
 .lineWrap .line.topLeft::before {
     content: "";
-    width: 3px;
-    height: 3px;
-    background-color: rgba(255, 255, 255, 0.1);
+    width: 1px;
+    height: 1px;
+    background-color: #7ce0fe;
     position: absolute;
     left: 0;
-    top: -6px;
+    top: -15px;
+    transition: all 0.3s;
 }
 .lineWrap .line.topRight {
-    left: 6px;
+    left: 15px;
     top: 0;
-    width: calc(100% - 12px);
+    width: calc(100% - 30px);
     height: 1px;
     background-color: rgba(255, 255, 255, 0.1);
     position: absolute;
+    transition: all 0.3s;
 }
 .lineWrap .line.topRight::before {
     content: "";
-    width: 3px;
-    height: 3px;
-    background-color: rgba(255, 255, 255, 0.1);
+    width: 1px;
+    height: 1px;
+    background-color: #7ce0fe;
     position: absolute;
     left: auto;
-    right: -6px;
+    right: -15px;
+    transition: all 0.3s;
 }
 .lineWrap .line.botLeft {
-    left: 6px;
+    left: 15px;
     top: auto;
     bottom: 0px;
-    width: calc(100% - 12px);
+    width: calc(100% - 30px);
     height: 1px;
     background-color: rgba(255, 255, 255, 0.1);
     position: absolute;
+    transition: all 0.3s;
 }
 .lineWrap .line.botLeft::before {
     content: "";
-    width: 3px;
-    height: 3px;
-    background-color: rgba(255, 255, 255, 0.1);
+    width: 1px;
+    height: 1px;
+    background-color: #7ce0fe;
     position: absolute;
-    left: -6px;
+    left: -15px;
     bottom: 0px;
+    transition: all 0.3s;
 }
 .lineWrap .line.botRight {
     right: 0;
-    top: 6px;
+    top: 15px;
     width: 1px;
-    height: calc(100% - 12px);
+    height: calc(100% - 30px);
     background-color: rgba(255, 255, 255, 0.1);
     position: absolute;
+    transition: all 0.3s;
 }
 .lineWrap .line.botRight::before {
     content: "";
-    width: 3px;
-    height: 3px;
-    background-color: rgba(255, 255, 255, 0.1);
+    width: 1px;
+    height: 1px;
+    background-color: #7ce0fe;
     position: absolute;
     right: 0;
-    bottom: -6px;
+    bottom: -15px;
+    transition: all 0.3s;
+}
+.lineWrap:hover .line.topLeft {
+    background-color: #7ce0fe;
+}
+.lineWrap:hover .line.topRight {
+    background-color: #7ce0fe;
+}
+.lineWrap:hover .line.botLeft {
+    background-color: #7ce0fe;
+}
+.lineWrap:hover .line.botRight {
+    background-color: #7ce0fe;
+}
+.lineWrap:hover .line.topLeft::before {
+    width: 5px;
+    height: 5px;
+}
+.lineWrap:hover .line.topRight::before {
+    width: 5px;
+    height: 5px;
+}
+.lineWrap:hover .line.botLeft::before {
+    width: 5px;
+    height: 5px;
+}
+.lineWrap:hover .line.botRight::before {
+    width: 5px;
+    height: 5px;
+}
+
+.lineWrap .sq-box {
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+}
+.lineWrap .sq-box span {
+    display: block;
+    width: 5px;
+    height: 5px;
+    background-color: #7ce0fe;
+    margin: 1px;
 }
 
 #musicBox {
@@ -734,4 +791,552 @@ svg {
     height: 10px;
     border-right: 1px solid #fff;
     border-bottom: 1px solid #fff;
+}
+
+:root {
+    --diamondGradient: linear-gradient(to top, var(--teal) 0%, rgba(30, 227, 207, 0) 64%);
+    --ink90: #002851;
+    --ink80: #1e4166;
+    --ink70: #3c5b7a;
+    --teal: #1ee3cf;
+}
+.leftNamePicture .loader {
+    position: absolute;
+    left: -21px;
+    top: -22px;
+}
+.box3__inner {
+    display: flex;
+}
+.box3__inner .left {
+    width: 103px;
+}
+
+.loader {
+    --offset-top: calc(2px);
+    --offset-bottom: calc(100% - 2px);
+
+    background-color: var(--ink90);
+    clip-path: polygon(
+        50% 0%,
+        100% 50%,
+        50% 100%,
+        0% 50%,
+        50% 0%,
+        50% var(--offset-top),
+        var(--offset-top) 50%,
+        50% var(--offset-bottom),
+        var(--offset-bottom) 50%,
+        50% var(--offset-top)
+    );
+    /*   clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%,
+                     50% 0%,
+                     50% 25%, 25% 50%, 50% 75%, 75% 50%,
+                     50% 25%); */
+    display: block;
+    height: 144px;
+    width: 144px;
+    overflow: hidden;
+    position: relative;
+    transform: rotate(45deg);
+}
+
+.loader__fill {
+    animation: diamondScroll 2s infinite linear;
+    background: var(--diamondGradient);
+    bottom: -4px;
+    left: -4px;
+    margin: auto;
+    position: absolute;
+    right: -4px;
+    top: -4px;
+}
+
+@keyframes diamondScroll {
+    0% {
+        transform: translate3d(0, -105%, 0);
+    }
+    70% {
+        transform: translate3d(0, -105%, 0);
+    }
+    100% {
+        transform: translate3d(0, 100%, 0);
+    }
+}
+.box22 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 240px;
+}
+#figure {
+    width: 171px;
+    height: 171px;
+    /* background-color: #ccc; */
+    position: relative;
+}
+#figure #f1 {
+    height: 171px;
+    width: 171px;
+    border-radius: 50%;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #06f;
+    box-shadow: 0 0 5px #06f;
+    opacity: 1;
+    position: relative;
+}
+#figure #f1 span {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -5px;
+    height: 10px;
+    width: 3px;
+    background: #06f;
+    box-shadow: 0 0 5px #06f;
+    border-radius: 10px;
+}
+#figure #f1 .f1-1 {
+    transform: rotateZ(30deg) translateY(91px);
+}
+#figure #f1 .f1-2 {
+    transform: rotateZ(60deg) translateY(91px);
+}
+#figure #f1 .f1-3 {
+    transform: rotateZ(90deg) translateY(91px);
+}
+#figure #f1 .f1-4 {
+    transform: rotateZ(120deg) translateY(91px);
+}
+#figure #f1 .f1-5 {
+    transform: rotateZ(150deg) translateY(91px);
+}
+#figure #f1 .f1-6 {
+    transform: rotateZ(180deg) translateY(91px);
+}
+#figure #f1 .f1-7 {
+    transform: rotateZ(210deg) translateY(91px);
+}
+#figure #f1 .f1-8 {
+    transform: rotateZ(240deg) translateY(91px);
+}
+#figure #f1 .f1-9 {
+    transform: rotateZ(270deg) translateY(91px);
+}
+#figure #f1 .f1-10 {
+    transform: rotateZ(300deg) translateY(91px);
+}
+#figure #f1 .f1-11 {
+    transform: rotateZ(330deg) translateY(91px);
+}
+#figure #f1 .f1-12 {
+    transform: rotateZ(360deg) translateY(91px);
+}
+#figure #f2 {
+    position: absolute;
+    height: 171px;
+    width: 171px;
+    left: 0;
+    top: 0;
+}
+#figure #f2 span {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -3px;
+    height: 6px;
+    width: 2px;
+    background: #666;
+}
+#figure #f2 .f21-1 {
+    transform: rotateZ(10deg) translateY(95px);
+}
+#figure #f2 .f21-2 {
+    transform: rotateZ(20deg) translateY(95px);
+}
+#figure #f2 .f21-3 {
+    transform: rotateZ(30deg) translateY(95px);
+}
+#figure #f2 .f21-4 {
+    transform: rotateZ(40deg) translateY(95px);
+}
+#figure #f2 .f21-5 {
+    transform: rotateZ(50deg) translateY(95px);
+}
+#figure #f2 .f21-6 {
+    transform: rotateZ(60deg) translateY(95px);
+}
+#figure #f2 .f21-7 {
+    transform: rotateZ(70deg) translateY(95px);
+}
+#figure #f2 .f21-8 {
+    transform: rotateZ(80deg) translateY(95px);
+}
+#figure #f2 .f21-9 {
+    transform: rotateZ(90deg) translateY(95px);
+}
+#figure #f2 .f21-10 {
+    transform: rotateZ(100deg) translateY(95px);
+}
+#figure #f2 .f21-11 {
+    transform: rotateZ(110deg) translateY(95px);
+}
+#figure #f2 .f21-12 {
+    transform: rotateZ(120deg) translateY(95px);
+}
+#figure #f2 .f21-13 {
+    transform: rotateZ(130deg) translateY(95px);
+}
+#figure #f2 .f21-14 {
+    transform: rotateZ(140deg) translateY(95px);
+}
+#figure #f2 .f21-15 {
+    transform: rotateZ(150deg) translateY(95px);
+}
+#figure #f2 .f21-16 {
+    transform: rotateZ(160deg) translateY(95px);
+}
+#figure #f2 .f21-17 {
+    transform: rotateZ(170deg) translateY(95px);
+}
+#figure #f2 .f21-18 {
+    transform: rotateZ(180deg) translateY(95px);
+}
+#figure #f2 .f21-19 {
+    transform: rotateZ(190deg) translateY(95px);
+}
+#figure #f2 .f21-20 {
+    transform: rotateZ(200deg) translateY(95px);
+}
+#figure #f2 .f21-21 {
+    transform: rotateZ(210deg) translateY(95px);
+}
+#figure #f2 .f21-22 {
+    transform: rotateZ(220deg) translateY(95px);
+}
+#figure #f2 .f21-23 {
+    transform: rotateZ(230deg) translateY(95px);
+}
+#figure #f2 .f21-24 {
+    transform: rotateZ(240deg) translateY(95px);
+}
+#figure #f2 .f21-25 {
+    transform: rotateZ(250deg) translateY(95px);
+}
+#figure #f2 .f21-26 {
+    transform: rotateZ(260deg) translateY(95px);
+}
+#figure #f2 .f21-27 {
+    transform: rotateZ(270deg) translateY(95px);
+}
+#figure #f2 .f21-28 {
+    transform: rotateZ(280deg) translateY(95px);
+}
+#figure #f2 .f21-29 {
+    transform: rotateZ(290deg) translateY(95px);
+}
+#figure #f2 .f21-30 {
+    transform: rotateZ(300deg) translateY(95px);
+}
+#figure #f2 .f21-31 {
+    transform: rotateZ(310deg) translateY(95px);
+}
+#figure #f2 .f21-32 {
+    transform: rotateZ(320deg) translateY(95px);
+}
+#figure #f2 .f21-33 {
+    transform: rotateZ(330deg) translateY(95px);
+}
+#figure #f2 .f21-34 {
+    transform: rotateZ(340deg) translateY(95px);
+}
+#figure #f2 .f21-35 {
+    transform: rotateZ(350deg) translateY(95px);
+}
+#figure #f2 .f21-36 {
+    transform: rotateZ(360deg) translateY(95px);
+}
+
+#figure #f3 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1000;
+    transform: translate(-50%, -50%);
+    height: 100px;
+    width: 100px;
+    border: 2px solid #09f;
+    border-radius: 100%;
+    background-color: #000;
+}
+
+#figure #f3 .f3-1 {
+    position: absolute;
+    left: 44px;
+    top: -3px;
+    bottom: -3px;
+    width: 10px;
+    background: #000;
+}
+#figure #f3 .f3-2 {
+    position: absolute;
+    top: 45px;
+    left: -3px;
+    right: -3px;
+    height: 10px;
+    background: #000;
+}
+#figure #f3 .f3-3 {
+    position: absolute;
+    top: 44px;
+    left: 49px;
+    height: 7px;
+    width: 2px;
+    background: #09f;
+    transform: rotateZ(45deg) translateY(55px);
+    border-radius: 5px;
+}
+#figure #f3 .f3-4 {
+    position: absolute;
+    top: 43px;
+    left: 47px;
+    height: 7px;
+    width: 2px;
+    background: #09f;
+    transform: rotateZ(-45deg) translateY(55px);
+    border-radius: 5px;
+}
+#figure #f3 .f3-5 {
+    position: absolute;
+    top: 47px;
+    left: 49px;
+    height: 7px;
+    width: 2px;
+    background: #09f;
+    transform: rotateZ(135deg) translateY(55px);
+    border-radius: 5px;
+}
+#figure #f3 .f3-6 {
+    position: absolute;
+    top: 46px;
+    left: 47px;
+    height: 7px;
+    width: 2px;
+    background: #09f;
+    transform: rotateZ(225deg) translateY(55px);
+    border-radius: 5px;
+}
+
+#figure #f4 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 130px;
+    width: 130px;
+    border: 10px solid #03c;
+    border-radius: 100%;
+    /* background-color: #fff; */
+}
+#figure #f4 .f4-1 {
+    position: absolute;
+    width: 2px;
+    height: 130px;
+    background: #000;
+    top: -10px;
+    left: calc(50% - 1px);
+    transform: translateZ(1px) rotateZ(45deg);
+    z-index: 1000;
+}
+#figure #f4 .f4-2 {
+    position: absolute;
+    width: 2px;
+    height: 130px;
+    background: #000;
+    top: -10px;
+    left: calc(50% - 1px);
+    transform: translateZ(1px) rotateZ(-45deg);
+}
+#figure #f4 .f4-3 {
+    position: absolute;
+    width: 40px;
+    height: 134px;
+    background: #000;
+    top: -12px;
+    left: 50%;
+    margin-left: -20px;
+}
+#figure #f4 .f4-3 .f4-3-1 {
+    position: absolute;
+    left: 13px;
+    display: block;
+    border: 1px solid #03c;
+    height: 14px;
+    width: 14px;
+    border-radius: 100%;
+}
+
+#figure #f4 .f4-3 .f4-3-1 b {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 8px;
+    width: 8px;
+    background: #03c;
+    border-radius: 100%;
+}
+#figure #f4 .f4-3 .f4-3-2 {
+    position: absolute;
+    bottom: 0;
+    left: 13px;
+    display: block;
+    border: 1px solid #03c;
+    height: 14px;
+    width: 14px;
+    border-radius: 100%;
+}
+#figure #f4 .f4-3 .f4-3-2 b {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 8px;
+    width: 8px;
+    background: #03c;
+    border-radius: 100%;
+}
+
+#figure #f4 .f4-4 {
+    position: absolute;
+    width: 40px;
+    height: 134px;
+    background: #000;
+    top: -12px;
+    left: 50%;
+    margin-left: -20px;
+    transform: translateZ(1px) rotateZ(-90deg);
+}
+
+#figure #f4 .f4-4 .f4-4-1 {
+    position: absolute;
+    bottom: 0;
+    left: 13px;
+    display: block;
+    border: 1px solid #03c;
+    height: 14px;
+    width: 14px;
+    border-radius: 100%;
+}
+#figure #f4 .f4-4 .f4-4-1 b {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 8px;
+    width: 8px;
+    background: #03c;
+    border-radius: 100%;
+}
+#figure #f4 .f4-4 .f4-4-2 {
+    position: absolute;
+    right: auto;
+    left: 13px;
+    display: block;
+    border: 1px solid #03c;
+    height: 14px;
+    width: 14px;
+    border-radius: 100%;
+}
+#figure #f4 .f4-4 .f4-4-2 b {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    height: 8px;
+    width: 8px;
+    background: #03c;
+    border-radius: 100%;
+}
+#figure #f5 {
+    position: absolute;
+    z-index: 1000;
+    left: 45px;
+    top: 45px;
+    height: 80px;
+    width: 80px;
+    /* background-color: #fff; */
+}
+#figure #f5 span {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -2px;
+    height: 4px;
+    width: 1px;
+    background: #666;
+    font-size: 30%;
+}
+#figure #f5 span b {
+    font-weight: normal;
+    position: absolute;
+    bottom: 150%;
+    width: 5px;
+    left: -2px;
+    overflow: hidden;
+    color: #939393;
+}
+#figure #f5 .f5-1 {
+    transform: rotateZ(20deg) translateY(40px);
+}
+#figure #f5 .f5-2 {
+    transform: rotateZ(40deg) translateY(40px);
+}
+#figure #f5 .f5-3 {
+    transform: rotateZ(60deg) translateY(40px);
+}
+#figure #f5 .f5-4 {
+    transform: rotateZ(80deg) translateY(40px);
+}
+#figure #f5 .f5-5 {
+    transform: rotateZ(100deg) translateY(40px);
+}
+#figure #f5 .f5-6 {
+    transform: rotateZ(120deg) translateY(40px);
+}
+#figure #f5 .f5-7 {
+    transform: rotateZ(140deg) translateY(40px);
+}
+#figure #f5 .f5-8 {
+    transform: rotateZ(160deg) translateY(40px);
+}
+#figure #f5 .f5-9 {
+    transform: rotateZ(180deg) translateY(40px);
+}
+#figure #f5 .f5-10 {
+    transform: rotateZ(200deg) translateY(40px);
+}
+#figure #f5 .f5-11 {
+    transform: rotateZ(220deg) translateY(40px);
+}
+#figure #f5 .f5-12 {
+    transform: rotateZ(240deg) translateY(40px);
+}
+#figure #f5 .f5-13 {
+    transform: rotateZ(260deg) translateY(40px);
+}
+#figure #f5 .f5-14 {
+    transform: rotateZ(280deg) translateY(40px);
+}
+#figure #f5 .f5-15 {
+    transform: rotateZ(300deg) translateY(40px);
+}
+#figure #f5 .f5-16 {
+    transform: rotateZ(320deg) translateY(40px);
+}
+#figure #f5 .f5-17 {
+    transform: rotateZ(340deg) translateY(40px);
+}
+#figure #f5 .f5-18 {
+    transform: rotateZ(360deg) translateY(40px);
 }
