--- a/김이현/assets/css/style2.css
+++ b/김이현/assets/css/style2.css
@@ -177,7 +177,6 @@
 }
 
 #section3 {
-    height: 2000px;
     background-color: #e7e4df;
 }
 
@@ -259,4 +258,101 @@
 }
 #section3 .right > ul > li > ul > li:first-child {
     border-top: 0;
+}
+
+/* section4 */
+#section4 {
+    background-color: #e7e4df;
+}
+.work__wrap {
+}
+.work__wrap .work {
+    display: flex;
+    height: 100vh;
+    border-bottom: 1px solid #000;
+}
+.work__wrap .work .left {
+    width: 70%;
+    height: 100%;
+    border-right: 1px solid #000;
+    position: relative;
+}
+.work__wrap .work .left .text h2 {
+    font-size: 10vw;
+    font-family: "NeoGeoTrial-Light";
+    font-family: "NeoGeoTrial-Black";
+    line-height: 0.9;
+    text-transform: uppercase;
+    padding: 20px;
+    border-bottom: 1px solid #000;
+}
+.work__wrap .work .left .text h2 em {
+    display: block;
+    font-size: 9.5vw;
+}
+.work__wrap .work .left .text p {
+    width: 450px;
+    padding: 20px;
+    font-family: "IropkeBatang";
+    word-break: keep-all;
+}
+
+.work__wrap .work .left .text a {
+    display: inline-block;
+    padding-left: 20px;
+    font-family: "NeoGeoTrial-Light";
+    color: #666;
+}
+.work__wrap .work .left .text a:hover {
+    text-decoration: underline;
+}
+.work__wrap .work .left .text a:last-child {
+    padding-left: 0;
+}
+.work__wrap .work .left .skill {
+    position: absolute;
+    right: 10px;
+    top: 70%;
+    font-family: "NeoGeoTrial-Light";
+    text-align: right;
+}
+.work__wrap .work .left .skill em {
+    display: block;
+    margin-bottom: 2px;
+    margin-top: 10px;
+}
+.work__wrap .work .left .skill i {
+    border: 1px solid #000;
+    padding: 4px;
+    display: inline-block;
+}
+.work__wrap .work .left .skill span {
+    display: block;
+}
+
+.work__wrap .work .right {
+    width: 30%;
+    background: #ccc;
+    height: 100%;
+    background-image: url("https://images.unsplash.com/photo-1577083165633-14ebcdb0f658?q=80&w=2483&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+.work__wrap .work .right::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #e2d6c6cb;
+}
+.work__wrap .work .right img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    z-index: 100;
 }
