--- a/강서연/assets/css/style.css
+++ b/강서연/assets/css/style.css
@@ -114,6 +114,8 @@ body {
     position: relative;
     z-index: 1;
     overflow-y: scroll;
+    /* border-left: 1px solid #fff;
+    border-right: 1px solid #fff; */
 }
 
 #contents .nav {
@@ -359,6 +361,7 @@ body {
     transition: all 0.3s;
     background: #000;
 }
+.lineWrap.active,
 .lineWrap:hover {
     color: #7ce0fe;
     background-color: #7ce0fe5b;
@@ -444,30 +447,38 @@ body {
     bottom: -15px;
     transition: all 0.3s;
 }
+.lineWrap.active .line.topLeft,
 .lineWrap:hover .line.topLeft {
     background-color: #7ce0fe;
 }
+.lineWrap.active .line.topRight,
 .lineWrap:hover .line.topRight {
     background-color: #7ce0fe;
 }
+.lineWrap.active .line.botLeft,
 .lineWrap:hover .line.botLeft {
     background-color: #7ce0fe;
 }
+.lineWrap.active .line.botRight,
 .lineWrap:hover .line.botRight {
     background-color: #7ce0fe;
 }
+.lineWrap.active .line.topLeft::before,
 .lineWrap:hover .line.topLeft::before {
     width: 5px;
     height: 5px;
 }
+.lineWrap.active .line.topRight::before,
 .lineWrap:hover .line.topRight::before {
     width: 5px;
     height: 5px;
 }
+.lineWrap.active .line.botLeft::before,
 .lineWrap:hover .line.botLeft::before {
     width: 5px;
     height: 5px;
 }
+.lineWrap.active .line.botRight::before,
 .lineWrap:hover .line.botRight::before {
     width: 5px;
     height: 5px;
@@ -885,7 +896,66 @@ svg {
     box-shadow: 0 0 5px #06f;
     opacity: 1;
     position: relative;
+    animation: f1 4s ease-in-out infinite;
 }
+@keyframes f1 {
+    0% {
+        transform: rotateZ(0deg);
+        opacity: 1;
+        border-color: #006;
+    }
+    10% {
+        transform: rotateZ(30deg);
+        opacity: 1;
+        border-color: #06f;
+    }
+    20% {
+        transform: rotateZ(-30deg);
+        opacity: 0;
+        border-color: #006;
+    }
+    30% {
+        transform: rotateZ(0deg);
+        opacity: 1;
+        border-color: #00c;
+    }
+    40% {
+        transform: rotateZ(-60deg);
+        opacity: 1;
+        border-color: #006;
+    }
+    50% {
+        transform: rotateZ(-40deg);
+        opacity: 1;
+        border-color: #03f;
+    }
+    60% {
+        transform: rotateZ(-100deg);
+        opacity: 0;
+        border-color: #03c;
+    }
+    70% {
+        transform: rotateZ(-150deg);
+        opacity: 1;
+        border-color: #006;
+    }
+    80% {
+        transform: rotateZ(100deg);
+        opacity: 0;
+        border-color: #006;
+    }
+    90% {
+        transform: rotateZ(30deg);
+        opacity: 1;
+        border-color: #099;
+    }
+    100% {
+        transform: rotateZ(0deg);
+        opacity: 1;
+        border-color: #006;
+    }
+}
+
 #figure #f1 span {
     display: block;
     position: absolute;
@@ -940,6 +1010,43 @@ svg {
     width: 171px;
     left: 0;
     top: 0;
+    transform: rotate(6deg);
+    animation: f2 4s ease-in-out infinite;
+}
+@keyframes f2 {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    10% {
+        transform: rotateZ(30deg);
+    }
+    20% {
+        transform: rotateZ(-30deg);
+    }
+    30% {
+        transform: rotateZ(0deg);
+    }
+    40% {
+        transform: rotateZ(-60deg);
+    }
+    50% {
+        transform: rotateZ(-40deg);
+    }
+    60% {
+        transform: rotateZ(-100deg);
+    }
+    70% {
+        transform: rotateZ(-150deg);
+    }
+    80% {
+        transform: rotateZ(100deg);
+    }
+    90% {
+        transform: rotateZ(30deg);
+    }
+    100% {
+        transform: rotateZ(0deg);
+    }
 }
 #figure #f2 span {
     display: block;
@@ -1065,12 +1172,24 @@ svg {
     top: 50%;
     left: 50%;
     z-index: 1000;
-    transform: translate(-50%, -50%);
+    margin-left: -50px;
+    margin-top: -50px;
     height: 100px;
     width: 100px;
     border: 2px solid #09f;
     border-radius: 100%;
     background-color: #000;
+    transform-origin: center;
+    animation: f3 20s linear infinite;
+}
+
+@keyframes f3 {
+    0% {
+        transform: translateZ(-5px) rotateZ(0deg);
+    }
+    100% {
+        transform: translateZ(-5px) rotateZ(360deg);
+    }
 }
 
 #figure #f3 .f3-1 {
@@ -1339,4 +1458,240 @@ svg {
 }
 #figure #f5 .f5-18 {
     transform: rotateZ(360deg) translateY(40px);
+}
+#figure #f6 {
+    position: absolute;
+    top: 63px;
+    left: 63px;
+    height: 46px;
+    width: 46px;
+    border-radius: 50%;
+    border: 1px solid #06f;
+    transform: translateZ(30px);
+    z-index: 6000;
+}
+#figure #f7 {
+    position: absolute;
+    top: 68px;
+    left: 68px;
+    height: 36px;
+    width: 36px;
+    border-radius: 50%;
+    border: 2px solid #06f;
+    transform: translateZ(34px);
+    z-index: 7000;
+}
+#figure #f7 .f7-1 {
+    position: absolute;
+    top: -14px;
+    left: 15px;
+    height: 60px;
+    width: 2px;
+    background: #06f;
+}
+#figure #f7 .f7-2 {
+    position: absolute;
+    top: -14px;
+    left: 14px;
+    height: 60px;
+    width: 2px;
+    background: #06f;
+    border-radius: 4px;
+    transform: translateZ(-1px) rotateZ(90deg);
+}
+.box22 {
+    position: relative;
+}
+#a1 {
+    position: absolute;
+    right: 0;
+    top: 5px;
+    color: #fff;
+    text-align: right;
+}
+#a1 .a1-1 {
+    display: block;
+    font-size: 10px;
+    color: #666;
+    line-height: 1;
+}
+#a1 .a1-2 {
+    color: #666;
+    font-size: 14px;
+    margin-top: -2px;
+}
+
+#a1 .a1-3 {
+    display: block;
+    color: #666;
+    font-size: 8px;
+    margin-top: -2px;
+}
+
+#a2 {
+    border: 1px dashed #666;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    border-radius: 50px;
+}
+#a2 .a2-1 {
+    display: block;
+    position: absolute;
+    left: 18px;
+    top: 5px;
+    height: 14px;
+    width: 4px;
+    background: #333;
+    border-radius: 3px;
+    animation: a21 8s linear infinite;
+    transform-origin: center bottom;
+}
+@keyframes a21 {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    100% {
+        transform: rotateZ(360deg);
+    }
+}
+
+#a3 {
+    border: 1px dashed #666;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    border-radius: 50px;
+}
+#a3::before {
+    content: "";
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: 9px;
+    top: 9px;
+    border: 1px dashed #66666680;
+    border-radius: 50px;
+}
+#a3 .a3-1 {
+    display: block;
+    position: absolute;
+    left: 18px;
+    top: 5px;
+    height: 14px;
+    width: 4px;
+    background: #333;
+    border-radius: 3px;
+    animation: a31 4s linear infinite 3s;
+    transform-origin: center bottom;
+}
+@keyframes a31 {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    100% {
+        transform: rotateZ(360deg);
+    }
+}
+
+#a4 {
+    position: absolute;
+    left: 0px;
+    bottom: 10px;
+    border-radius: 50px;
+    color: #fff;
+}
+#a4 span {
+    display: block;
+}
+#a4 .a4-1 {
+    font-size: 10px;
+    color: #666;
+}
+#a4 .a4-2 {
+    font-size: 12px;
+    color: #d7d7d7;
+    text-transform: uppercase;
+}
+.current-time3 span {
+    display: inline-block;
+    transform: rotate(0deg);
+    cursor: pointer;
+    transition: all 1s ease-in-out;
+}
+.current-time3 span:hover {
+    transform: rotate(720deg);
+}
+.box55 .search {
+    width: 100%;
+    position: relative;
+}
+.box55 .search input {
+    background-color: transparent;
+    margin: 10px 10px 10px 0;
+    border: 1px solid #fff;
+    padding: 3px 20px;
+    border-radius: 20px;
+    width: 100%;
+    color: #fff;
+    outline: none;
+    font-size: 14x;
+}
+.box55 .search input:active {
+    border-color: #ffff;
+}
+.box55 .search input::placeholder {
+    color: #fff;
+    text-transform: uppercase;
+    padding-bottom: 3px;
+}
+.box55 .search .btn {
+    position: absolute;
+    right: 11px;
+    top: 16px;
+    width: 24px;
+    height: 20px;
+    background-size: contain;
+    background-image: url(../img/youtube.svg);
+    background-repeat: no-repeat;
+    background-color: transparent;
+    border: 0;
+}
+
+.search__list ul {
+    height: 230px;
+    overflow-y: auto;
+    margin: 5px 0;
+}
+.search__list li {
+    border-top: 0.5px solid #ffffff41;
+    border-bottom: 0.5px solid #ffffff41;
+    color: #ffffffaf;
+    padding: 10px 10px 10px 30px;
+    font-size: 12px;
+    position: relative;
+    margin-top: 3px;
+}
+.search__list li .num {
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    font-size: 10px;
+    display: none;
+}
+.search__list li .img {
+    position: absolute;
+    left: 2px;
+    top: 1p7x;
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    border-radius: 50px;
+    background-image: url("https://i.ytimg.com/vi/6yQNueGCrPw/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBVMDwK4CxsVM1hg0GyP2-AWGU2zw");
+    background-position: center;
+    background-size: contain;
 }
